--- a/Webscraping-checkpoint.ipynb
+++ b/Webscraping-checkpoint.ipynb
@@ -3,13 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36670890",
+   "id": "f07b7655",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json \n",
-    "klajsklaJSKLAjsklaJSKLAklsaKLSKALnsklaNSLNAS"
+    "klajsklaJSKLAjsklaJSKLAklsaKLSKALnsklaNSLNAS\n",
+    "alkslkalskalslakslaslkalskal"
    ]
   }
  ],
