--- a/Webscraping-checkpoint.ipynb
+++ b/Webscraping-checkpoint.ipynb
@@ -2,16 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f07b7655",
+   "execution_count": 6,
+   "id": "101e0101",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json \n",
-    "klajsklaJSKLAjsklaJSKLAklsaKLSKALnsklaNSLNAS\n",
-    "alkslkalskalslakslaslkalskal"
+    "headers_dict = {\"API_KEY\": #3ac2f199-34ca-433a-a839-46b81be88596\"}\n",
+    "#URL = \"API Endpoint\"\n",
+    "#wData = requests.get(url=URL, headers=headers_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b85030af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d5d6766",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24120092",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a59457a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
