--- a/Webscraping-checkpoint.ipynb
+++ b/Webscraping-checkpoint.ipynb
@@ -9,9 +9,11 @@
    "source": [
     "import requests\n",
     "import json \n",
-    "headers_dict = {\"API_KEY\": #3ac2f199-34ca-433a-a839-46b81be88596\"}\n",
+    "headers_dict = {\"API_KEY\": \"3ac2f199-34ca-433a-a839-46b81be88596\"}\n",
+    "   # Comentarios pq deu erro abaixo             \n",
     "#URL = \"API Endpoint\"\n",
-    "#wData = requests.get(url=URL, headers=headers_dict)"
+    "#wData = requests.get(url=URL, headers=headers_dict)\n",
+    "                "
    ]
   },
   {
@@ -33,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24120092",
+   "id": "02ad59d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -41,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a59457a5",
+   "id": "4d26b4d0",
    "metadata": {},
    "outputs": [],
    "source": []
