--- a/Webscraping-checkpoint.ipynb
+++ b/Webscraping-checkpoint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39fcfade",
+   "id": "e7d032e8",
    "metadata": {},
    "source": [
     "  Utilizar a API do ESR Data do FAS do USDA (órgão do governo dos EUA para monitorar a exportação agrícola) e desenvolver uma rotina em Python para acompanhar semanalmente as exportações dos Estados Unidos de determinada cultura para dois países, conforme abaixo:\n",
@@ -25,25 +25,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "91e9a7ee",
+   "execution_count": 31,
+   "id": "6ca62921",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'requests.models.Response'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>countryCode</th>\n",
+       "      <th>countryName</th>\n",
+       "      <th>countryDescription</th>\n",
+       "      <th>regionId</th>\n",
+       "      <th>gencCode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>EUROPEAN</td>\n",
+       "      <td>EUROPEAN UNION - 27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>99</td>\n",
+       "      <td>AX1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1010</td>\n",
+       "      <td>GREENLD</td>\n",
+       "      <td>GREENLAND</td>\n",
+       "      <td>11</td>\n",
+       "      <td>GRL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1220</td>\n",
+       "      <td>CANADA</td>\n",
+       "      <td>CANADA</td>\n",
+       "      <td>11</td>\n",
+       "      <td>CAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1610</td>\n",
+       "      <td>MIGUEL</td>\n",
+       "      <td>ST. PIERRE AND MIQUELON</td>\n",
+       "      <td>11</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206</th>\n",
+       "      <td>9350</td>\n",
+       "      <td>GUAM</td>\n",
+       "      <td>GUAM</td>\n",
+       "      <td>9</td>\n",
+       "      <td>GUM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>207</th>\n",
+       "      <td>9410</td>\n",
+       "      <td>CAN EN I</td>\n",
+       "      <td>CANTON AND ENDERBURY ISLANDS</td>\n",
+       "      <td>9</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>208</th>\n",
+       "      <td>9510</td>\n",
+       "      <td>AM SAMOA</td>\n",
+       "      <td>AMERICAN SAMOA</td>\n",
+       "      <td>9</td>\n",
+       "      <td>ASM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209</th>\n",
+       "      <td>9610</td>\n",
+       "      <td>NMARIANA</td>\n",
+       "      <td>NORTHERN MARIANA ISLANDS</td>\n",
+       "      <td>9</td>\n",
+       "      <td>MNP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210</th>\n",
+       "      <td>9800</td>\n",
+       "      <td>US O IS</td>\n",
+       "      <td>US MINOR OUTLYING ISLAND</td>\n",
+       "      <td>9</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>211 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     countryCode countryName               countryDescription  regionId  \\\n",
+       "0              1    EUROPEAN   EUROPEAN UNION - 27                    1   \n",
+       "1              2     UNKNOWN                          UNKNOWN        99   \n",
+       "2           1010    GREENLD   GREENLAND                              11   \n",
+       "3           1220    CANADA    CANADA                                 11   \n",
+       "4           1610    MIGUEL    ST. PIERRE AND MIQUELON                11   \n",
+       "..           ...         ...                              ...       ...   \n",
+       "206         9350    GUAM      GUAM                                    9   \n",
+       "207         9410    CAN EN I  CANTON AND ENDERBURY ISLANDS            9   \n",
+       "208         9510    AM SAMOA  AMERICAN SAMOA                          9   \n",
+       "209         9610    NMARIANA  NORTHERN MARIANA ISLANDS                9   \n",
+       "210         9800    US O IS   US MINOR OUTLYING ISLAND                9   \n",
+       "\n",
+       "    gencCode  \n",
+       "0       None  \n",
+       "1        AX1  \n",
+       "2        GRL  \n",
+       "3        CAN  \n",
+       "4       None  \n",
+       "..       ...  \n",
+       "206      GUM  \n",
+       "207     None  \n",
+       "208      ASM  \n",
+       "209      MNP  \n",
+       "210     None  \n",
+       "\n",
+       "[211 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests\n",
     "import json \n",
+    "import pandas as pd \n",
     "headers_dict = {\"API_KEY\": \"3ac2f199-34ca-433a-a839-46b81be88596\"}\n",
     "   # Comentarios pq deu erro abaixo             \n",
     "URL = \"https://apps.fas.usda.gov/OpenData/api/esr/countries\"\n",
     "wData = requests.get(url=URL, headers=headers_dict)\n",
     "print(type(wData))  \n",
     "json.loads(wData.text)\n",
+    "pd.read_json(wData.text)\n",
+    "pd.merge(wData, on=['CPF'], how='left')\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b4ab433c",
+   "id": "78a5b428",
    "metadata": {},
    "source": []
   },
@@ -58,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e2a9d35",
+   "id": "b2549c8f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -66,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56b6781a",
+   "id": "9a715683",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -74,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf5b20f4",
+   "id": "a52ed4df",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -82,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1c0dc35",
+   "id": "02108281",
    "metadata": {},
    "outputs": [],
    "source": []
