--- a/Webscraping-checkpoint.ipynb
+++ b/Webscraping-checkpoint.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "id": "6a025243",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "4         1610    MIGUEL    ST. PIERRE AND MIQUELON                11     None"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,26 +204,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "id": "0c2c15ea",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'wData' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [14]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Checando se existe CHINA e MEXICO dentro dos dados\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCHINA\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(\u001b[43mwData\u001b[49m\u001b[38;5;241m.\u001b[39mtext))\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMEXICO\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(wData\u001b[38;5;241m.\u001b[39mtext))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'wData' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "# Checando se existe CHINA e MEXICO dentro dos dados\n",
-    "print('CHINA' in str(wData.text))\n",
-    "print('MEXICO' in str(wData.text))"
+    "print('CHINA' in str(Data_countries.text))\n",
+    "print('MEXICO' in str(Data_countries.text))"
    ]
   },
   {
@@ -236,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "id": "09bc946b",
    "metadata": {},
    "outputs": [
@@ -246,7 +243,7 @@
        "'[{\"countryCode\":1,\"countryName\":\"EUROPEAN\",\"countryDescription\":\"EUROPEAN UNION - 27           \",\"regionId\":1,\"gencCode\":null},{\"countryCode\":2,\"countryName\":\"UNKNOWN\",\"countryDescription\":\"UNKNOWN\",\"regionId\":99,\"gencCode\":\"AX1\"},{\"countryCode\":1010,\"countryName\":\"GREENLD \",\"countryDescription\":\"GREENLAND                      \",\"regionId\":11,\"gencCode\":\"GRL\"},{\"countryCode\":1220,\"countryName\":\"CANADA  \",\"countryDescription\":\"CANADA                         \",\"regionId\":11,\"gencCode\":\"CAN\"},{\"countryCode\":1610,\"countryName\":\"MIGUEL  \",\"countryDescription\":\"ST. PIERRE AND MIQUELON        \",\"regionId\":11,\"gencCode\":null},{\"countryCode\":2010,\"countryName\":\"MEXICO  \",\"countryDescription\":\"MEXICO                         \",\"regionId\":11,\"gencCode\":\"MEX\"},{\"countryCode\":2050,\"countryName\":\"GUATMAL \",\"countryDescription\":\"GUATEMALA                      \",\"regionId\":11,\"gencCode\":\"GTM\"},{\"countryC'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "id": "2144bf5c",
    "metadata": {},
    "outputs": [],
@@ -289,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "id": "b2c0ca80",
    "metadata": {},
    "outputs": [
@@ -300,7 +297,7 @@
        "Name: countryCode, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "id": "d09ea023",
    "metadata": {},
    "outputs": [
@@ -324,7 +321,7 @@
        "Name: countryCode, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82a6cb76",
+   "id": "6f59b025",
    "metadata": {},
    "source": [
     "   # Variáveis      "
@@ -345,8 +342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "ff79941a",
+   "execution_count": 64,
+   "id": "2cc5b72c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,8 +353,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "8592e4df",
+   "execution_count": 65,
+   "id": "d30a852a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,8 +363,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "1651ca37",
+   "execution_count": 66,
+   "id": "cf77b5fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5c7364c",
+   "id": "4a5031a6",
    "metadata": {},
    "source": [
     "# Requests \n",
@@ -385,8 +382,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "1bf9f8b7",
+   "execution_count": 67,
+   "id": "b102dca0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fe00338",
+   "id": "4df6ef08",
    "metadata": {},
    "source": [
     "# Coletando os dados das exportações de soja dos EUA para China e México\n"
@@ -404,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33e6c0e1",
+   "id": "953a964e",
    "metadata": {},
    "source": [
     "# Data Frame "
@@ -412,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "id": "1feadaeb",
    "metadata": {},
    "outputs": [
@@ -430,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "id": "ed2f5065",
    "metadata": {},
    "outputs": [
@@ -441,7 +438,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [45]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df_mexico \u001b[38;5;241m=\u001b[39m  \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43mData_mexico\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m df_mexico\u001b[38;5;241m.\u001b[39mhead()\n",
+      "Input \u001b[1;32mIn [69]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df_mexico \u001b[38;5;241m=\u001b[39m  \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43mData_mexico\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m df_mexico\u001b[38;5;241m.\u001b[39mhead()\n",
       "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\util\\_decorators.py:207\u001b[0m, in \u001b[0;36mdeprecate_kwarg.<locals>._deprecate_kwarg.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    205\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    206\u001b[0m         kwargs[new_arg_name] \u001b[38;5;241m=\u001b[39m new_arg_value\n\u001b[1;32m--> 207\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
       "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\util\\_decorators.py:311\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    305\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(args) \u001b[38;5;241m>\u001b[39m num_allow_args:\n\u001b[0;32m    306\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[0;32m    307\u001b[0m         msg\u001b[38;5;241m.\u001b[39mformat(arguments\u001b[38;5;241m=\u001b[39marguments),\n\u001b[0;32m    308\u001b[0m         \u001b[38;5;167;01mFutureWarning\u001b[39;00m,\n\u001b[0;32m    309\u001b[0m         stacklevel\u001b[38;5;241m=\u001b[39mstacklevel,\n\u001b[0;32m    310\u001b[0m     )\n\u001b[1;32m--> 311\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
       "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\json\\_json.py:612\u001b[0m, in \u001b[0;36mread_json\u001b[1;34m(path_or_buf, orient, typ, dtype, convert_axes, convert_dates, keep_default_dates, numpy, precise_float, date_unit, encoding, encoding_errors, lines, chunksize, compression, nrows, storage_options)\u001b[0m\n\u001b[0;32m    609\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m json_reader\n\u001b[0;32m    611\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m json_reader:\n\u001b[1;32m--> 612\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mjson_reader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
@@ -470,6 +467,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a1641330",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64a1a659",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "845a4a19",
    "metadata": {},
    "outputs": [],
    "source": []
