--- a/Webscraping-checkpoint.ipynb
+++ b/Webscraping-checkpoint.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 89,
    "id": "55d6b573",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 90,
    "id": "4dad6465",
    "metadata": {},
    "outputs": [],
@@ -80,15 +80,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 91,
    "id": "66a7c67c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Coletando os dados dos Países \n",
-    "Data_countries = requests.get(url=url_countries, headers=headers_dict)  \n",
+    "data_countries = requests.get(url=url_countries, headers=headers_dict)  \n",
     "# Coletando os dados das commodities \n",
-    "Data_commodities = requests.get(url=url_commodities, headers=headers_dict) "
+    "data_commodities = requests.get(url=url_commodities, headers=headers_dict) "
    ]
   },
   {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 92,
    "id": "6a025243",
    "metadata": {},
    "outputs": [
@@ -187,14 +187,14 @@
        "4         1610    MIGUEL    ST. PIERRE AND MIQUELON                11     None"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_json(Data_countries.text)\n",
-    "df.head()"
+    "df_countries = pd.read_json(data_countries.text)\n",
+    "df_countries.head()"
    ]
   },
   {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 93,
    "id": "0c2c15ea",
    "metadata": {},
    "outputs": [
@@ -222,8 +222,8 @@
    ],
    "source": [
     "# Checando se existe CHINA e MEXICO dentro dos dados\n",
-    "print('CHINA' in str(Data_countries.text))\n",
-    "print('MEXICO' in str(Data_countries.text))"
+    "print('CHINA' in str(data_countries.text))\n",
+    "print('MEXICO' in str(data_countries.text))"
    ]
   },
   {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 94,
    "id": "09bc946b",
    "metadata": {},
    "outputs": [
@@ -246,13 +246,13 @@
        "'[{\"countryCode\":1,\"countryName\":\"EUROPEAN\",\"countryDescription\":\"EUROPEAN UNION - 27           \",\"regionId\":1,\"gencCode\":null},{\"countryCode\":2,\"countryName\":\"UNKNOWN\",\"countryDescription\":\"UNKNOWN\",\"regionId\":99,\"gencCode\":\"AX1\"},{\"countryCode\":1010,\"countryName\":\"GREENLD \",\"countryDescription\":\"GREENLAND                      \",\"regionId\":11,\"gencCode\":\"GRL\"},{\"countryCode\":1220,\"countryName\":\"CANADA  \",\"countryDescription\":\"CANADA                         \",\"regionId\":11,\"gencCode\":\"CAN\"},{\"countryCode\":1610,\"countryName\":\"MIGUEL  \",\"countryDescription\":\"ST. PIERRE AND MIQUELON        \",\"regionId\":11,\"gencCode\":null},{\"countryCode\":2010,\"countryName\":\"MEXICO  \",\"countryDescription\":\"MEXICO                         \",\"regionId\":11,\"gencCode\":\"MEX\"},{\"countryCode\":2050,\"countryName\":\"GUATMAL \",\"countryDescription\":\"GUATEMALA                      \",\"regionId\":11,\"gencCode\":\"GTM\"},{\"countryC'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "str(Data_countries.text)[:900]\n"
+    "str(data_countries.text)[:900]\n"
    ]
   },
   {
@@ -270,13 +270,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 95,
    "id": "2144bf5c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tratando os dados: Removendo espaços   \"  x   \"  ----> \"x\"\n",
-    "df[\"countryName\"] = df[\"countryName\"].str.strip()"
+    "df_countries[\"countryName\"] = df_countries[\"countryName\"].str.strip()"
    ]
   },
   {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 96,
    "id": "b2c0ca80",
    "metadata": {},
    "outputs": [
@@ -300,20 +300,20 @@
        "Name: countryCode, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Pegando o country_code de China \n",
-    "china_countryCode = df[df['countryName'] == 'CHINA']['countryCode']\n",
-    "china_countryCode"
+    "china_countrycode = df_countries[df_countries['countryName'] == 'CHINA']['countryCode']\n",
+    "china_countrycode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 97,
    "id": "d09ea023",
    "metadata": {},
    "outputs": [
@@ -324,15 +324,15 @@
        "Name: countryCode, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Pegando o country_code de Mexico \n",
-    "mexico_countryCode = df[df['countryName'] == 'MEXICO']['countryCode']\n",
-    "mexico_countryCode"
+    "mexico_countrycode = df_countries[df_countries['countryName'] == 'MEXICO']['countryCode']\n",
+    "mexico_countrycode"
    ]
   },
   {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61582cbb",
+   "id": "e5f8ac87",
    "metadata": {},
    "source": [
     "# Data frame "
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 98,
    "id": "9fe4af91",
    "metadata": {},
    "outputs": [
@@ -427,14 +427,14 @@
        "4            105  Wheat - Durum       1"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_json(Data_commodities.text)\n",
-    "df.head()"
+    "df_commodities = pd.read_json(data_commodities.text)\n",
+    "df_commodities.head()"
    ]
   },
   {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 99,
    "id": "cd7f94e7",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
    ],
    "source": [
     "# Checando se existe soja dentro dos dados\n",
-    "print('Soybeans' in str(Data_commodities.text))"
+    "print('Soybeans' in str(data_commodities.text))"
    ]
   },
   {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 100,
    "id": "d0ec1c4d",
    "metadata": {},
    "outputs": [
@@ -484,13 +484,13 @@
        "'[{\"commodityCode\":101,\"commodityName\":\"Wheat - HRW\",\"unitId\":1},{\"commodityCode\":102,\"commodityName\":\"Wheat - SRW\",\"unitId\":1},{\"commodityCode\":103,\"commodityName\":\"Wheat - HRS\",\"unitId\":1},{\"commodityCode\":104,\"commodityName\":\"Wheat - White\",\"unitId\":1},{\"commodityCode\":105,\"commodityName\":\"Wheat - Durum\",\"unitId\":1},{\"commodityCode\":106,\"commodityName\":\"Wheat - Mixed\",\"unitId\":1},{\"commodityCode\":107,\"commodityName\":\"All Wheat\",\"unitId\":1},{\"commodityCode\":201,\"commodityName\":\"Wheat Products\",\"unitId\":1},{\"commodityCode\":301,\"commodityName\":\"Barley\",\"unitId\":1},{\"commodityCode\":401,\"commodityName\":\"Corn\",\"unitId\":1},{\"commodityCode\":501,\"commodityName\":\"Rye\",\"unitId\":1},{\"commodityCode\":601,\"commodityName\":\"Oats\",\"unitId\":1},{\"commodityCode\":701,\"commodityName\":\"Sorghum\",\"unitId\":1},{\"commodityCode\":801,\"commodityName\":\"Soybeans\",\"unitId\":1},{\"commodityCode\":901,\"commodityName\":\"Soybea'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "str(Data_commodities.text)[:900]"
+    "str(data_commodities.text)[:900]"
    ]
   },
   {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 101,
    "id": "579ec409",
    "metadata": {},
    "outputs": [
@@ -514,15 +514,15 @@
        "Name: commodityCode, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Como aparentemente, parece tudo ok com os dados acima, logo podemos coletar diretamente sem limpar os dados\n",
-    "soybeans_commodityCode = df[df['commodityName'] == 'Soybeans']['commodityCode']\n",
-    "soybeans_commodityCode "
+    "soybeans_commoditycode = df_commodities[df_commodities['commodityName'] == 'Soybeans']['commodityCode']\n",
+    "soybeans_commoditycode "
    ]
   },
   {
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9cd1fe6",
+   "id": "63a9d010",
    "metadata": {},
    "source": [
     "#      Parâmetros necessários \n"
@@ -543,8 +543,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "8fab10b6",
+   "execution_count": 102,
+   "id": "b9dbba57",
    "metadata": {},
    "outputs": [
     {
@@ -561,20 +561,20 @@
        "Name: commodityCode, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print(\"O código da soja é\")\n",
-    "soybeans_commodityCode"
+    "soybeans_commoditycode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "123fa85a",
+   "execution_count": 103,
+   "id": "71030615",
    "metadata": {},
    "outputs": [
     {
@@ -591,20 +591,20 @@
        "Name: countryCode, dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print(\"O código da China é\")\n",
-    "china_countryCode"
+    "china_countrycode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "fe0f2658",
+   "execution_count": 104,
+   "id": "b7698b0a",
    "metadata": {},
    "outputs": [
     {
@@ -621,19 +621,19 @@
        "Name: countryCode, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print(\"O código do México é\")\n",
-    "mexico_countryCode"
+    "mexico_countrycode"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "efba973a",
+   "id": "de3a08f0",
    "metadata": {},
    "source": [
     "# Links com os parâmetros acima "
@@ -641,8 +641,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "c39a2bbf",
+   "execution_count": 105,
+   "id": "29e159d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,8 +651,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "50b28496",
+   "execution_count": 106,
+   "id": "9be673d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ade86fa7",
+   "id": "e9eee92c",
    "metadata": {},
    "source": [
     "# Requests "
@@ -669,14 +669,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "5a497d0b",
+   "execution_count": 107,
+   "id": "3b7f4246",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Coletando os dados requeridos das exportações: \n",
-    "Data_china = requests.get(url=url_china, headers=headers_dict)  \n",
-    "Data_mexico = requests.get(url=url_mexico, headers=headers_dict)  "
+    "data_china = requests.get(url=url_china, headers=headers_dict)  \n",
+    "data_mexico = requests.get(url=url_mexico, headers=headers_dict)  "
    ]
   },
   {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 108,
    "id": "1feadaeb",
    "metadata": {},
    "outputs": [
@@ -933,19 +933,19 @@
        "9  2021-11-04T00:00:00  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_json(Data_china.text)\n",
-    "df.head(10)"
+    "df_china = pd.read_json(data_china.text)\n",
+    "df_china.head(10)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "69a8d888",
+   "id": "0d60ab05",
    "metadata": {},
    "source": [
     "# Data Frame - Exportações para o México"
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 109,
    "id": "ed2f5065",
    "metadata": {},
    "outputs": [
@@ -1197,13 +1197,13 @@
        "9  2021-11-04T00:00:00  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_mexico =  pd.read_json(Data_mexico.text)\n",
+    "df_mexico =  pd.read_json(data_mexico.text)\n",
     "df_mexico.head(10)"
    ]
   },
